--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+tsra0ne:
+  name: Sravan Goud
+  title: iOS Developer
+  url: https://github.com/tsra0ne
+  image_url: https://github.com/tsra0ne.png
