--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,16 +1,8 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
-hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
-docusaurus:
-  label: Docusaurus
-  permalink: /docusaurus
-  description: Docusaurus tag description
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
+swiftui:
+  label: SwiftUI
+  permalink: /swiftui
+  description: SwiftUI Blog Posts
+uikit:
+  label: UIKit
+  permalink: /uikit
+  description: UIKit Blog Posts
